# ccdc_roche_utils

./: pyproject.toml
ccdc_roche_utils/: ccdc_fix_mol.sh  ccdc_fix_mol_conformer.py  ccdc_helper_functions.py  rdkit_fix_mol_conformer.py
ccdc_roche_utils/plot_utils/: roche_branding.py  seaborn_plots.py
tests/testdata/: test_ccdc_fix_mol_conformer.py
