[tool.poetry]
name = "ccdc-roche-utils"
version = "0.1.0"
description = "Utility scripts for molecular modeling."
authors = ["Andreas Tosstorff <andreas.tosstorff@roche.com>"]
readme = "README.md"
packages = [{ include = "ccdc_roche_utils" }]

[tool.poetry.dependencies]
python = ">=3.9"
rdkit = ">=2023.9.2"
pandas = "^2.1.3"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
